# deep-mutual-learning

./: README.md  pyproject.toml
dcl/: __init__.py  gates.py  graph.py  trainer.py
dml/: __init__.py  core.py
dml/optimizers/: __init__.py  lars.py
dml/schedulers/: __init__.py  cosine_warmup.py
docs/: README.md  api-reference.md  architecture.md  examples.md  getting-started.md
examples/: READMD.md
examples/CIFAR-10/: dcl-train.py  pre-train.py
examples/CIFAR-10/test/: dcl-test.py  dml-test.py  pre-train.py
examples/CIFAR-100/: dcl-train.py  pre-train.py
examples/CIFAR-100/test/: dcl-test.py  dml-test.py  pre-train.py
examples/CIFAR10/: dcl_train.py  pre_train.py  watch.ipynb
examples/CIFAR10/SimCLR/: README.md  disco_train.py  dml_train.py  dogo_train.py  independent_train.py  knn_eval.py  losses.py  transform.py
examples/CIFAR10/SimCLR/models/: __init__.py  simclr_model.py
examples/CIFAR10/evaluation/: dcl_test.py  dml_test.py  pre_train.py
examples/CIFAR10/test/: dcl_test.py
examples/CIFAR100/: README.md  dcl_search.py  dcl_train.py  dml_train.py  independent_train.py  kd_t2_train.py  kd_train.py  pre_train.py  watch.ipynb
examples/CIFAR100/SimCLR/: .gitignore  dogo_train.py  independent_train.py  losses.py
examples/CIFAR100/evaluation/: README.md  dcl_test.py  dml_test.py  evaluate_baseline.py  evaluate_dcl.py  pre_train.py
examples/CIFAR100/test/: dcl_test.py
ktg/: gates.py  graph.py  losses.py
ktg/dataset/cifar_datasets/: cifar10.py  cifar100.py
ktg/models/cifar_models/: __init__.py
ktg/utils/: __init__.py  checkpoint.py
(+26 files in other folders)
