[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.0.1"
name = "ktg"
description = "KnowledgeTransferGraph"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Yuki Harada", email = "yukiharada1228@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch",
    "torchvision",
    "optuna",
    "tensorboard",
    "ipykernel",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["ktg"]
